Overflow-x fixing5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,6 @@ body {
   /*color: #FFFFFF;*/
 }
 
-.main_wrap {
-  /*overflow-x: hidden;*/
-}
-
 .container {
 	min-width: 90%;
 }
